.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: af-reservation-svc
  labels:
    app: assignforce
spec:
  ports:
    - port: 10000
      targetPort: res-http
      protocol: TCP
      name: res-svc-http
  selector:
    service: reservation
