.k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: af-reservation-ing
  labels:
    app: assignforce
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /reservation/(.+)
            backend:
              serviceName: af-reservation-svc
              servicePort: res-svc-http
